--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -562,6 +562,218 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "stop = stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['New_without_stopwords'] = df['New'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>New</th>\n",
+       "      <th>New_without_stopwords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>CRIME</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Melissa Jeltsen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
+       "      <td>She left her husband. He killed their children...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>there were 2 mass shootings in texas last week...</td>\n",
+       "      <td>2 mass shootings texas last week, 1 tv. left h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
+       "      <td>Andy McDonald</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/will-smit...</td>\n",
+       "      <td>Of course it has a song.</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>will smith joins diplo and nicky jam for the 2...</td>\n",
+       "      <td>smith joins diplo nicky jam 2018 world cup's o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Hugh Grant Marries For The First Time At Age 57</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/hugh-gran...</td>\n",
+       "      <td>The actor and his longtime girlfriend Anna Ebe...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>hugh grant marries for the first time at age 5...</td>\n",
+       "      <td>hugh grant marries first time age 57. actor lo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/jim-carre...</td>\n",
+       "      <td>The actor gives Dems an ass-kicking for not fi...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>jim carrey blasts 'castrato' adam schiff and d...</td>\n",
+       "      <td>jim carrey blasts 'castrato' adam schiff democ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/julianna-...</td>\n",
+       "      <td>The \"Dietland\" actress said using the bags is ...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>julianna margulies uses donald trump poop bags...</td>\n",
+       "      <td>julianna margulies uses donald trump poop bags...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        category                                           headline  \\\n",
+       "0          CRIME  There Were 2 Mass Shootings In Texas Last Week...   \n",
+       "1  ENTERTAINMENT  Will Smith Joins Diplo And Nicky Jam For The 2...   \n",
+       "2  ENTERTAINMENT    Hugh Grant Marries For The First Time At Age 57   \n",
+       "3  ENTERTAINMENT  Jim Carrey Blasts 'Castrato' Adam Schiff And D...   \n",
+       "4  ENTERTAINMENT  Julianna Margulies Uses Donald Trump Poop Bags...   \n",
+       "\n",
+       "           authors                                               link  \\\n",
+       "0  Melissa Jeltsen  https://www.huffingtonpost.com/entry/texas-ama...   \n",
+       "1    Andy McDonald  https://www.huffingtonpost.com/entry/will-smit...   \n",
+       "2       Ron Dicker  https://www.huffingtonpost.com/entry/hugh-gran...   \n",
+       "3       Ron Dicker  https://www.huffingtonpost.com/entry/jim-carre...   \n",
+       "4       Ron Dicker  https://www.huffingtonpost.com/entry/julianna-...   \n",
+       "\n",
+       "                                   short_description       date  \\\n",
+       "0  She left her husband. He killed their children... 2018-05-26   \n",
+       "1                           Of course it has a song. 2018-05-26   \n",
+       "2  The actor and his longtime girlfriend Anna Ebe... 2018-05-26   \n",
+       "3  The actor gives Dems an ass-kicking for not fi... 2018-05-26   \n",
+       "4  The \"Dietland\" actress said using the bags is ... 2018-05-26   \n",
+       "\n",
+       "                                                 New  \\\n",
+       "0  there were 2 mass shootings in texas last week...   \n",
+       "1  will smith joins diplo and nicky jam for the 2...   \n",
+       "2  hugh grant marries for the first time at age 5...   \n",
+       "3  jim carrey blasts 'castrato' adam schiff and d...   \n",
+       "4  julianna margulies uses donald trump poop bags...   \n",
+       "\n",
+       "                               New_without_stopwords  \n",
+       "0  2 mass shootings texas last week, 1 tv. left h...  \n",
+       "1  smith joins diplo nicky jam 2018 world cup's o...  \n",
+       "2  hugh grant marries first time age 57. actor lo...  \n",
+       "3  jim carrey blasts 'castrato' adam schiff democ...  \n",
+       "4  julianna margulies uses donald trump poop bags...  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2 mass shootings texas last week, 1 tv. left husband. killed children. another day america.'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['New_without_stopwords'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['NWSC'] = df['New_without_stopwords'].str.replace('[^\\w\\s]','')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jim carrey blasts castrato adam schiff democrats new artwork actor gives dems asskicking fighting hard enough donald trump'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['NWSC'][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
